# Scriptteam

./: .gitignore  README.md  Sprint 1 Meetings  User Stories
Backend/: Adding items to cart.cpp  Adding_cart.cpp  Admin.cpp  Admin.h  Checkout_processing.cpp  Checkout_processing.h  Database.cpp  Database.h  Managing my Account.cpp  Managing_my_Account.cpp  Managing_my_Account.h  Product.cpp  Product.h  Product_filtering.cpp  Product_filtering.h  SQL_Queries.docx  SupportRequest.cpp  SupportRequest.h  User.cpp  User.h  User_Registration_logincode.cpp  User_Registration_logincode.h  View_product_details.cpp  View_product_details.h  cart_manager.h  main.cpp
Backend/Ez_watch/: CMakeLists.txt  Ez_watch.sln  data.json
Backend/Ez_watch/Ez_watch/: Ez_watch.cpp  Ez_watch.vcxproj  Ez_watch.vcxproj.filters  data.json
Backend/Ez_watch/Ez_watch/x64/Debug/: Ez_watch.exe.recipe  Ez_watch.ilk  vc143.idb
Backend/Ez_watch/Ez_watch/x64/Debug/Ez_watch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Ez_watch.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Backend/Ez_watch/handlers/: cart_routes.h  product_routes.h  user_routes.h
Backend/Ez_watch/include/: AuthManager.h  CartManager.h  DatabaseManager.h  ProductManager.h  UserManager.h
Backend/Ez_watch/middleware/: auth_guard.h
Backend/Ez_watch/src/: AuthManager.cpp  CartManager.cpp  DatabaseManager.cpp  ProductManager.cpp  UserManager.cpp  connection_test.cpp  main.cpp
Backend/Ez_watch/storage/: database.cpp  database.h
Frontend(sql.js version)/: Files Goals.md  HomePage.html  account.html  add-product.html  admin.html  browser.html  cart.html  edit-product.html  login.html  product.html  (+3 more)
(+34 files in other folders)
